fix css styles and menu visible on - off

--- a/src/frontend/Details/Details.css
+++ b/src/frontend/Details/Details.css
@@ -1,10 +1,26 @@
-.Details .content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.parallax-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    perspective: 8px;
+    perspective-origin: 0%;
+    display: flex;
+  }
+
+.Details {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
 }
 
+.Details .content {
+}
+
+
 @media(max-width: 450px) {
-    .Details .content {
-        grid-template-columns: 1fr;
-    }
+    
 }
